--- a/about.html
+++ b/about.html
@@ -1,14 +1,22 @@
-# hello-world
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello World,</title>
+  </head>
+  <body>
+    
+    <div>
+      <h1>Hello World,</h1>
 
-<h1>Hello World,</h1>
-
-<p>I remember a guy sitting at my bar seven years ago. His shirt had angle brackets on it and something inside I didn't understand. I asked what it meant and he started vaguely talking about programming. I was interested but he said I would be better suited for UI stuff (I didn't understand that) or concept design. He said that coding was complex, then he crypticlly explained if/else statements and left me with that.</p>
-<br />
-<p>I was still bartending seven years later. I had moved from Keene, NH to Las Vegas to bartend in the one place where bartending was still respected as a profession.</p>
-<br />
-<p>Then one day I was walking down the strip and walked into the Miracle Mile mall and saw a "Tipsy Bartender" (robot bartender). There was only a single employee at the front and a mob of people watching and filming. I knew that the job I had wanted was gone. I came to Vegas for the six-figure job with a union. Where I would have dental and a 401k.</p>
-<p>Even if that job is still available with those salaries, it won't be for long.</p>
-<br />
-<p>I wanted to leave my job. I started looking for ways to make money and programming came up. There is a free, introductory Harvard Computer Science 50 (CS50) lecture series on YouTube. I started with that and than found freeCodeCamp. FreeCodeCamp offered interactivity that forced me to code. Than I got stuck on JavaScript. I tried to backtrack and find another learning outlet. I found Treehouse and used their free week to see if I liked it. It was more thorough than freeCodeCamp so I paid $25 a month and started.</p>
-<p>Once I got halfway through Tree House's Front End Web Development program I quit my bartending job. I had enough saved for a few months of living expenses.</p>
-
+      <p>I remember a guy sitting at my bar seven years ago. His shirt had angle brackets on it and something inside I didn't understand. I asked what it meant and he started vaguely talking about programming. I was interested but he said I would be better suited for UI stuff (I didn't understand that) or concept design. He said that coding was complex, then he crypticlly explained if/else statements and left me with that.</p>
+      <br />
+      <p>I was still bartending seven years later. I had moved from Keene, NH to Las Vegas to bartend in the one place where bartending was still respected as a profession.</p>
+      <br />
+      <p>Then one day I was walking down the strip and walked into the Miracle Mile mall and saw a "Tipsy Bartender" (robot bartender). There was only a single employee at the front and a mob of people watching and filming. I knew that the job I had wanted was gone. I came to Vegas for the six-figure job with a union. Where I would have dental and a 401k.</p>
+      <p>Even if that job is still available with those salaries, it won't be for long.</p>
+      <br />
+      <p>I wanted to leave my job. I started looking for ways to make money and programming came up. There is a free, introductory Harvard Computer Science 50 (CS50) lecture series on YouTube. I started with that and than found freeCodeCamp. FreeCodeCamp offered interactivity that forced me to code. Than I got stuck on JavaScript. I tried to backtrack and find another learning outlet. I found Treehouse and used their free week to see if I liked it. It was more thorough than freeCodeCamp so I paid $25 a month and started.</p>
+      <p>Once I got halfway through Tree House's Front End Web Development program I quit my bartending job. I had enough saved for a few months of living expenses.</p>
+    </div>
+  </body>
+</html>
